# masasin.github.io

./: .gitignore  404.html  CNAME  Gemfile  LICENSE  _config.yml  index.html  index.md  main.py  mkdocs.yml  params.json  presentations.md  pyproject.toml  requirements.txt  resume.md  resumes  resumes.md  sitemap.xml
.github/workflows/: ci.yml  static.yml
_data/: authors.yml  navigation.yml
_layouts/: default.html
_pages/: about.md  categories.md  collection-archive.md  consulting.md  jp.md  page-archive.md  portfolio.md  resume.md  tags.md  year-archive.md
_posts/: 2021-02-16-first-post.md
assets/: extra.css  extra.js
contact/: index.html
cv/: index.html
cv/education/: index.html
cv/mentoring/: index.html
cv/projects/: index.html
cv/skills/: index.html
cv/tools/: index.html
cv/work/: index.html
docs/: .pages  contact.md  cv.md  hire_me.md  hiring.md  index.fr.md  index.ja.md  index.md  index.nl.md  testimonials.md
docs/assets/: extra.css
docs/cv/: .pages  education.md  index.fr.md  index.md  languages.fr.md  languages.md  languages.nl.md  mentoring.md  projects.md  skills.fr.md  skills.md  skills.nl.md  teaching.fr.md  teaching.md  teaching.nl.md  teaching_experience.fr.md  teaching_experience.md  teaching_experience.nl.md  tools.md  tools.nl.md  work.md
docs/portfolio/: index.ja.md
en/: index.html
en/contact/: index.html
en/cv/: index.html
en/hiring/: index.html
en/testimonials/: index.html
hiring/: index.html
javascripts/: main.js
overrides/: main.html
search/: search_index.json
testimonials/: index.html
(+100 files in other folders)
