[project]
name = "masasin-github-io"
version = "1.1.0"
description = "A Python and Robotics Expert"
authors = ["Jean Nassar"]
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-material>=9.6.15",
    "mkdocs-obsidian-bridge>=1.2.0",
]
